Added base markup

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,51 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+<section>
+  <div class="container grid-xl">
+    HERO SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    PROBLEMS SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    PROMO SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    ADVANTAGES SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    TESTIMONIALS SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    PLAN SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    AUTHOR SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    PROGRAM SECTION
+  </div>
+</section>
+<section>
+  <div class="container grid-xl">
+    PRICE SECTION
+  </div>
+</section>
 <script src="scripts/main.js"></script>
 </body>
 </html>
