fix 'Does not open external anchors using rel=noopener'

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
             <p class="tile-title h5">Ксения Мерида</p>
             <p class="tile-subtitle text-large text-italic hide-sm">Просто замечательно, когда такие девушки, как молодая мама Вика, становятся твоими друзьями!!!!))) Ведь, когда у тебя появляется первый малыш, а ты понятия не имеешь, что с ним делать, это реально страшно. Так было и со мной. Так уж вышло, что тема детей меня не касалась почти 30 лет: у подруг детей не было, родня с детьми далеко, младших братьев и сестер нет. В общем после рождения своего ребенка, я мало того, что не знала, как и что с ним делать, но и погрузилась в глубокую послеродовую депрессию. Но, спасибо Вике! Она вовремя взбодрила и дала нужную информацию. Именно нужную и правильную, потому что в интернете полно информации, половине из которой даже не нужно уделять время. Оказалось, все на много проще и не так уж страшно))) И спасибо за личное общение, которое было так мне необходимо в первые месяцы материнства, эта поддержка просто бесценна!</p>
             <div class="my-2 hide-sm">
-              <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank">ВКонтакте</a>
+              <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank" rel="noopener">ВКонтакте</a>
             </div>
             <div class="accordion show-sm">
               <div class="accordion-item">
@@ -286,7 +286,7 @@
                 <div class="accordion-body">
                   <p class="tile-subtitle text-large text-italic">Просто замечательно, когда такие девушки, как молодая мама Вика, становятся твоими друзьями!!!!))) Ведь, когда у тебя появляется первый малыш, а ты понятия не имеешь, что с ним делать, это реально страшно. Так было и со мной. Так уж вышло, что тема детей меня не касалась почти 30 лет: у подруг детей не было, родня с детьми далеко, младших братьев и сестер нет. В общем после рождения своего ребенка, я мало того, что не знала, как и что с ним делать, но и погрузилась в глубокую послеродовую депрессию. Но, спасибо Вике! Она вовремя взбодрила и дала нужную информацию. Именно нужную и правильную, потому что в интернете полно информации, половине из которой даже не нужно уделять время. Оказалось, все на много проще и не так уж страшно))) И спасибо за личное общение, которое было так мне необходимо в первые месяцы материнства, эта поддержка просто бесценна!</p>
                   <div class="my-2">
-                    <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank">ВКонтакте</a>
+                    <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank" rel="noopener">ВКонтакте</a>
                   </div>
                 </div>
               </div>
@@ -305,7 +305,7 @@
             <p class="tile-title h5">Инга, <small>мама 5-летней Наоми</small></p>
             <p class="tile-subtitle text-large text-italic hide-sm">Хочется сказать Виктории спасибо, за нескончаемый поток энергии и идей, которыми она делится в своем курсе. Мне близки идеи «Нового родительства» — это современные гуманистические взгляды на воспитание и образование, а также большая ответственность за результат. Виктория выбирает из множества методик и школ самое лучшее и результат мы видим непосредственно на её детях. Это живые, полные энергии, эрудированные и развитые дети, которые будут творцами своей судьбы.  При этом у них остается время на простые игры и общение. Желаю Виктории сил и успеха, а Никите и Алисе — новых побед!</p>
             <div class=" hide-sm">
-              <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank">ВКонтакте</a>
+              <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank" rel="noopener">ВКонтакте</a>
             </div>
             <div class="accordion show-sm">
               <div class="accordion-item">
@@ -317,7 +317,7 @@
                 <div class="accordion-body">
                   <p class="tile-subtitle text-large text-italic">Хочется сказать Виктории спасибо, за нескончаемый поток энергии и идей, которыми она делится в своем курсе. Мне близки идеи «Нового родительства» — это современные гуманистические взгляды на воспитание и образование, а также большая ответственность за результат. Виктория выбирает из множества методик и школ самое лучшее и результат мы видим непосредственно на её детях. Это живые, полные энергии, эрудированные и развитые дети, которые будут творцами своей судьбы.  При этом у них остается время на простые игры и общение. Желаю Виктории сил и успеха, а Никите и Алисе — новых побед!</p>
                   <div class="my-2">
-                    <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank">ВКонтакте</a>
+                    <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank" rel="noopener">ВКонтакте</a>
                   </div>
                 </div>
               </div>
@@ -647,7 +647,7 @@
     </div>
 
     <div class="column col-11 col-mx-auto">
-      <p class="text-center">Нажимая кнопку <samp><span class="text-capitalize label bg-primary text-light">заказать</span></samp>, Вы соглашаетесь с <a target="_blank" href="policy.html"><span class="text-capitalize">политикой&nbsp;конфиденциальности</span></a>.</p>
+      <p class="text-center">Нажимая кнопку <samp><span class="text-capitalize label bg-primary text-light">заказать</span></samp>, Вы соглашаетесь с <a target="_blank" href="policy.html" rel="noopener"><span class="text-capitalize">политикой&nbsp;конфиденциальности</span></a>.</p>
     </div>
   </div>
 </div>
