--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОН-ЛАЙН МАРАФОН </title>
+  <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОН-ЛАЙН МАРАФОН</title>
   <meta name="description" content="Практикум по созданию индивидуальной проактивной семейной карты">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta property="og:image" content="images/og-image.jpg"/>
+  <meta name="theme-color" content="#526e45">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 
