--- a/src/index.html
+++ b/src/index.html
@@ -656,4 +656,15 @@
 
 <script src="scripts/main.js"></script>
 </body>
+<script>
+  if ('serviceWorker' in navigator) {
+    console.log("Will the service worker register?");
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(reg){
+        console.log("Yes, it did.");
+      }).catch(function(err) {
+      console.log("No it didn't. This happened: ", err)
+    });
+  }
+</script>
 </html>
