--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОН-ЛАЙН МАРАФОН</title>
   <meta name="description" content="Практикум по созданию индивидуальной проактивной семейной карты">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
   <meta property="og:image" content="images/og-image.jpg"/>
   <meta name="theme-color" content="#526e45">
   <link rel="stylesheet" href="styles/main.css">
@@ -146,7 +146,7 @@
       <div class="columns">
       <div class="column col-10 col-md-12 col-mx-auto">
         <div class="video-responsive">
-          <iframe src="https://www.youtube.com/embed/ohWOWqskHWU?ecver=1" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/ohWOWqskHWU?ecver=1" frameborder="0" allowfullscreen title="ПРОМОРОЛИК"></iframe>
         </div>
       </div>
       </div>
