--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,18 @@
     <div class="columns">
       <div class="column col-10 col-xl-12 col-mx-auto">
         <h2 class="main-title text-uppercase text-bold">Он-лайн марафон</h2>
-        <br>
+        <div class="break"></div>
         <h1 class="text-shadow super-title text-uppercase text-bold"><span class="quo">&laquo;</span>Новый взгляд на&nbsp;детей<span class="quo">&raquo;</span></h1>
-        <br>
+        <div class="break"></div>
         <h3 class="col-10 col-xl-12 col-mx-auto">Практикум по&nbsp;созданию индивидуальной проактивной семейной&nbsp;карты</h3>
-        <br>
+        <div class="break"></div>
         <h4 class="col-10 col-xl-12 col-mx-auto">Постройте счастливые отношения со&nbsp;своими детьми на&nbsp;всю жизнь, не&nbsp;жертвуя личными интересами и&nbsp;развитием!</h4>
-        <br>
+        <div class="break"></div>
         <h4 class="text-uppercase text-bold">Ближайший старт <span class="h2 text-bold"><u>21&nbsp;августа!</u>!</span></h4>
         <h4 class="text-uppercase text-bold">Не упустите свой&nbsp;шанс!</h4>
       </div>
     </div>
-    <br>
+    <div class="break"></div>
     <div class="columns">
       <div class="column col-3 col-xl-4 col-md-5 col-sm-10 col-xs-12 col-ml-auto">
         <button class="btn btn-primary btn-block btn-lg text-uppercase text-ellipsis modal-link">Забронировать место</button>
@@ -156,13 +156,14 @@
         <h2 class="text-uppercase text-bold">Остановитесь и&nbsp;выдохните</h2>
       </div>
     </div>
-      <div class="columns">
-      <div class="column col-10 col-md-12 col-mx-auto">
-        <div class="video-responsive">
-          <iframe src="https://www.youtube.com/embed/ohWOWqskHWU?ecver=1" frameborder="0" allowfullscreen title="ПРОМОРОЛИК"></iframe>
-        </div>
+    <div class="columns">
+      <div class="column col-12 col-md-12 col-mx-auto">
+        <video class="video-responsive" controls loop muted>
+          <source src="video/monstroid.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+          <source src="video/monstroid.webm" type='video/webm; codecs="vp8, vorbis"'>
+        </video>
       </div>
-      </div>
+    </div>
   </div>
 </section>
 <div class="container grid-xl">
@@ -459,7 +460,7 @@
     <br>
     <br>
     <div class="columns">
-      <div class="column col-3 col-lg-3 col-md-5 col-sm-10 col-xs-12 col-mx-auto">
+      <div class="column col-4 col-lg-4 col-md-5 col-sm-10 col-xs-12 col-mx-auto">
         <button class="btn btn-primary btn-block btn-lg text-uppercase text-ellipsis modal-link">забронировать место</button>
       </div>
     </div>
@@ -610,29 +611,29 @@
 </div>
 
 <!--ORDER-->
-<section id="order" class="d-flex full-screen center-screen bg-secondary">
+<section id="order" class="d-flex full-screen center-screen">
   <div class="container grid-xl text-center">
     <div class="columns">
       <div class="column col-10 col-lg-12 col-mx-auto">
         <h2 class="main-title text-uppercase text-bold">Сколько Вы готовы заплатить за&nbsp;счастье своих детей и&nbsp;гармонию в&nbsp;семье?</h2>
-        <br>
+        <div class="break"></div>
         <h1 class="main-title text-uppercase text-bold text-dark">Правильно, это бесценно!</h1>
-        <br>
+        <div class="break"></div>
         <h3 class="main-title text-uppercase">А&nbsp;стоимость моего марафона составляет всего<br><span class="h2 text-bold"><u>2990&nbsp;рублей</u>!</span></h3>
       </div>
     </div>
-    <br>
+    <div class="break"></div>
     <div class="columns">
-      <div class="column col-3 col-lg-4 col-md-5 col-sm-10 col-xs-12 col-mx-auto">
+      <div class="column col-4 col-lg-4 col-md-5 col-sm-10 col-xs-12 col-mx-auto">
         <button class="btn btn-primary btn-block btn-lg text-uppercase text-ellipsis modal-link">Участвовать</button>
       </div>
     </div>
     <div class="columns">
-      <div class="column col-3 col-lg-4 col-md-6 col-sm-10 col-xs-12 col-mx-auto">
+      <div class="column col-4 col-lg-4 col-md-6 col-sm-10 col-xs-12 col-mx-auto">
         <p class="text-italic">*Первая неделя марафона бесплатна для&nbsp;всех&nbsp;участников</p>
       </div>
     </div>
-    <br>
+    <div class="break"></div>
     <div class="column col-6 col-sm-10 col-xs-12 col-mx-auto">
       <div class="columns">
         <div class="column col-3 col-xs-6">
