--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="ru" class="no-js">
 <head>
   <meta charset="UTF-8">
-  <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОН-ЛАЙН МАРАФОН</title>
+  <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОНЛАЙН МАРАФОН</title>
   <meta name="description" content="Практикум по созданию индивидуальной проактивной семейной карты">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
-  <meta property="og:image" content="images/og-image.png"/>
-  <meta name="theme-color" content="#526e45">
+  <meta property="og:image" content="/og-image.jpg?ver=1"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?ver=1">
+  <meta name="theme-color" content="#5c5edc">
   <link rel="manifest" href="/manifest.json">
   <style>
     html.no-js img.lazy-image {
@@ -31,13 +32,13 @@
   <div class="container grid-xl text-center">
     <div class="columns">
       <div class="column col-10 col-xs-12 col-mx-auto">
-        <h2 class="text-shadow main-title text-uppercase text-bold">Он-лайн марафон</h2>
+        <h2 class="text-shadow main-title text-uppercase text-bold">Онлайн марафон</h2>
         <div class="break"></div>
         <h1 class="text-shadow super-title text-uppercase text-bold"><span class="quo">&laquo;</span>Новый взгляд на&nbsp;детей<span class="quo">&raquo;</span></h1>
         <div class="break"></div>
         <h3 class="col-10 col-xl-12 col-mx-auto text-shadow">Практикум по&nbsp;созданию индивидуальной проактивной семейной&nbsp;карты</h3>
         <div class="break"></div>
-        <h4 class="col-10 col-xl-12 col-mx-auto text-shadow">Постройте счастливые отношения со&nbsp;своими детьми на&nbsp;всю жизнь, не&nbsp;жертвуя личными интересами и&nbsp;развитием!</h4>
+        <h5 class="col-10 col-xl-12 col-mx-auto text-shadow">Постройте счастливые отношения со&nbsp;своими детьми на&nbsp;всю жизнь, не&nbsp;жертвуя личными интересами и&nbsp;развитием!</h5>
         <div class="break"></div>
         <h4 class="text-uppercase text-bold text-shadow">Ближайший старт <span class="h2 text-bold"><u>21&nbsp;августа!</u>!</span></h4>
         <h4 class="text-uppercase text-bold text-shadow">Не упустите свой&nbsp;шанс!</h4>
@@ -54,7 +55,7 @@
     </div>
     <div class="columns">
       <div class="column col-4 col-md-5 col-sm-12 col-mx-auto">
-        <p class="text-italic text-shadow">*Первая неделя марафона бесплатна для&nbsp;всех&nbsp;участников</p>
+        <p class="text-italic text-shadow">* Первая неделя марафона бесплатна для&nbsp;всех&nbsp;участников</p>
       </div>
     </div>
   </div>
@@ -64,7 +65,7 @@
 <section class="section">
   <div class="container grid-xl text-center">
     <div class="columns">
-      <div class="column col-6 col-md-10 col-xs-12 section-title col-mx-auto text-center">
+      <div class="column col-6 col-xl-10 col-md-10 col-xs-12 section-title col-mx-auto text-center">
         <h2 class="text-uppercase text-bold">Все мы, родители, сталкиваемся с&nbsp;одними и&nbsp;теми же проблемами</h2>
       </div>
     </div>
@@ -143,7 +144,7 @@
         <div class="card bg-gray">
           <div class="card-image">
             <svg class="icon">
-              <use xlink:href="images/symbols.svg#bad"></svg>
+              <use xlink:href="images/symbols.svg#bad"></use>
             </svg>
           </div>
           <div class="card-header">
@@ -164,15 +165,15 @@
 <section class="section">
   <div class="container grid-xl">
     <div class="columns">
-      <div class="column col-6 col-md-10 col-xs-12 section-title col-mx-auto text-center">
+      <div class="column col-6 col-xl-10 col-md-10 col-xs-12 section-title col-mx-auto text-center">
         <h2 class="text-uppercase text-bold">Остановитесь и&nbsp;выдохните</h2>
       </div>
     </div>
     <div class="columns">
-      <div class="column col-12 col-md-10 col-xs-12 col-mx-auto">
-        <video class="video-responsive" controls loop muted>
-          <source src="video/monstroid.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+      <div class="column col-10 col-xs-12 col-mx-auto">
+        <video class="video-responsive" controls muted>
           <source src="video/monstroid.webm" type='video/webm; codecs="vp8, vorbis"'>
+          <source src="video/monstroid.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         </video>
       </div>
     </div>
@@ -186,7 +187,7 @@
 <section class="section">
   <div class="container grid-xl text-center">
     <div class="columns">
-      <div class="column col-6 col-md-10 col-xs-12col-md-10 col-xs-12 col-mx-autotitle col-mx-auto">
+      <div class="column col-6 col-xl-10 col-md-10 col-xs-12col-md-10 col-xs-12 col-mx-autotitle col-mx-auto">
         <h2 class="text-uppercase text-bold">Меньше чем за&nbsp;месяц, Вы сможете в&nbsp;Вашей семье</h2>
       </div>
     </div>
@@ -300,7 +301,7 @@
 <section class="section">
   <div class="container grid-xl">
     <div class="columns">
-      <div class="column col-6 col-md-12 section-title col-mx-auto text-center">
+      <div class="column col-6 col-xl-10 col-md-12 section-title col-mx-auto text-center">
         <h2 class="text-uppercase text-bold">отзывы</h2>
       </div>
     </div>
@@ -323,7 +324,7 @@
             <p class="tile-title h5">Ксения Мерида</p>
             <p class="tile-subtitle text-large text-italic hide-sm">Просто замечательно, когда такие девушки, как молодая мама Вика, становятся твоими друзьями!!!!))) Ведь, когда у тебя появляется первый малыш, а ты понятия не имеешь, что с ним делать, это реально страшно. Так было и со мной. Так уж вышло, что тема детей меня не касалась почти 30 лет: у подруг детей не было, родня с детьми далеко, младших братьев и сестер нет. В общем после рождения своего ребенка, я мало того, что не знала, как и что с ним делать, но и погрузилась в глубокую послеродовую депрессию. Но, спасибо Вике! Она вовремя взбодрила и дала нужную информацию. Именно нужную и правильную, потому что в интернете полно информации, половине из которой даже не нужно уделять время. Оказалось, все на много проще и не так уж страшно))) И спасибо за личное общение, которое было так мне необходимо в первые месяцы материнства, эта поддержка просто бесценна!</p>
             <div class="my-2 hide-sm">
-              <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank" rel="noopener">
+              <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank" rel="noopener" title="Ксения Мерида">
                 <svg class="icon social">
                   <use xlink:href="images/symbols.svg#vk"></use>
                 </svg>
@@ -339,7 +340,7 @@
                 <div class="accordion-body">
                   <p class="tile-subtitle text-large text-italic">Просто замечательно, когда такие девушки, как молодая мама Вика, становятся твоими друзьями!!!!))) Ведь, когда у тебя появляется первый малыш, а ты понятия не имеешь, что с ним делать, это реально страшно. Так было и со мной. Так уж вышло, что тема детей меня не касалась почти 30 лет: у подруг детей не было, родня с детьми далеко, младших братьев и сестер нет. В общем после рождения своего ребенка, я мало того, что не знала, как и что с ним делать, но и погрузилась в глубокую послеродовую депрессию. Но, спасибо Вике! Она вовремя взбодрила и дала нужную информацию. Именно нужную и правильную, потому что в интернете полно информации, половине из которой даже не нужно уделять время. Оказалось, все на много проще и не так уж страшно))) И спасибо за личное общение, которое было так мне необходимо в первые месяцы материнства, эта поддержка просто бесценна!</p>
                   <div class="my-2">
-                    <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank" rel="noopener">
+                    <a class="text-large text-gray" href="https://vk.com/id9754638" target="_blank" rel="noopener" title="Ксения Мерида">
                       <svg class="icon social">
                         <use xlink:href="images/symbols.svg#vk"></use>
                       </svg>
@@ -369,7 +370,7 @@
             <p class="tile-title h5">Инга, <small>мама 5-летней Наоми</small></p>
             <p class="tile-subtitle text-large text-italic hide-sm">Хочется сказать Виктории спасибо, за нескончаемый поток энергии и идей, которыми она делится в своем курсе. Мне близки идеи «Нового родительства» — это современные гуманистические взгляды на воспитание и образование, а также большая ответственность за результат. Виктория выбирает из множества методик и школ самое лучшее и результат мы видим непосредственно на её детях. Это живые, полные энергии, эрудированные и развитые дети, которые будут творцами своей судьбы.  При этом у них остается время на простые игры и общение. Желаю Виктории сил и успеха, а Никите и Алисе — новых побед!</p>
             <div class=" hide-sm">
-              <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank" rel="noopener">
+              <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank" rel="noopener" title="Инга" >
                 <svg class="icon social">
                   <use xlink:href="images/symbols.svg#vk"></use>
                 </svg>
@@ -385,7 +386,7 @@
                 <div class="accordion-body">
                   <p class="tile-subtitle text-large text-italic">Хочется сказать Виктории спасибо, за нескончаемый поток энергии и идей, которыми она делится в своем курсе. Мне близки идеи «Нового родительства» — это современные гуманистические взгляды на воспитание и образование, а также большая ответственность за результат. Виктория выбирает из множества методик и школ самое лучшее и результат мы видим непосредственно на её детях. Это живые, полные энергии, эрудированные и развитые дети, которые будут творцами своей судьбы.  При этом у них остается время на простые игры и общение. Желаю Виктории сил и успеха, а Никите и Алисе — новых побед!</p>
                   <div class="my-2">
-                    <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank" rel="noopener">
+                    <a class="text-large text-gray" href="https://vk.com/ingakosto" target="_blank" rel="noopener" title="Инга">
                       <svg class="icon social">
                         <use xlink:href="images/symbols.svg#vk"></use>
                       </svg>
@@ -408,7 +409,7 @@
 <section class="section">
   <div class="container grid-xl text-center">
     <div class="columns">
-      <div class="column col-6 col-md-10 col-xs-12 section-title col-mx-auto text-center">
+      <div class="column col-6 col-xl-10 col-md-10 col-xs-12 section-title col-mx-auto text-center">
         <h2 class="text-uppercase text-bold">Как проходит марафон</h2>
       </div>
     </div>
@@ -530,7 +531,7 @@
 <section class="section">
   <div class="container grid-xl">
     <div class="columns">
-      <div class="column col-6 col-md-10 col-xs-12 col-mx-auto section-title text-center">
+      <div class="column col-6 col-xl-10 col-md-10 col-xs-12 col-mx-auto section-title text-center">
         <h2 class="text-uppercase text-bold">кто проводит</h2>
       </div>
     </div>
@@ -563,7 +564,7 @@
 <section id="program" class="section">
   <div class="container grid-xl text-center">
     <div class="columns">
-      <div class="column col-6 col-md-10 col-xs-12 section-title col-mx-auto text-center">
+      <div class="column col-6 col-xl-10 col-md-10 col-xs-12 section-title col-mx-auto text-center">
         <h2 class="text-uppercase text-bold">программа</h2>
       </div>
     </div>
@@ -700,17 +701,17 @@
     </div>
     <div class="columns">
       <div class="column col-4 col-md-5 col-sm-12 col-mx-auto">
-        <p class="text-italic">*Первая неделя марафона бесплатна для&nbsp;всех&nbsp;участников</p>
+        <p class="text-italic">* Первая неделя марафона бесплатна для&nbsp;всех&nbsp;участников</p>
       </div>
     </div>
     <div class="break"></div>
     <div class="column col-4 col-sm-10 col-xs-12 col-mx-auto">
-      <a class="text-large" href="#">
+      <a class="text-large" href="#" title="Youtube">
         <svg class="icon social">
           <use xlink:href="images/symbols.svg#youtube"></use>
         </svg>
       </a>
-      <a class="text-large" href="#">
+      <a class="text-large" href="#" title="Instagram">
         <svg class="icon social">
           <use xlink:href="images/symbols.svg#instagram"></use>
         </svg>
@@ -758,31 +759,8 @@
   </div>
 </div>
 
-<!--MODERNIZR-->
-<script>
-  /*! modernizr 3.5.0 (Custom Build) | MIT *
-   * https://modernizr.com/download/?-webp-setclasses !*/
-  !function(e,n,A){function o(e,n){return typeof e===n}function t(){var e,n,A,t,a,i,l;for(var f in r)if(r.hasOwnProperty(f)){if(e=[],n=r[f],n.name&&(e.push(n.name.toLowerCase()),n.options&&n.options.aliases&&n.options.aliases.length))for(A=0;A<n.options.aliases.length;A++)e.push(n.options.aliases[A].toLowerCase());for(t=o(n.fn,"function")?n.fn():n.fn,a=0;a<e.length;a++)i=e[a],l=i.split("."),1===l.length?Modernizr[l[0]]=t:(!Modernizr[l[0]]||Modernizr[l[0]]instanceof Boolean||(Modernizr[l[0]]=new Boolean(Modernizr[l[0]])),Modernizr[l[0]][l[1]]=t),s.push((t?"":"no-")+l.join("-"))}}function a(e){var n=u.className,A=Modernizr._config.classPrefix||"";if(c&&(n=n.baseVal),Modernizr._config.enableJSClass){var o=new RegExp("(^|\\s)"+A+"no-js(\\s|$)");n=n.replace(o,"$1"+A+"js$2")}Modernizr._config.enableClasses&&(n+=" "+A+e.join(" "+A),c?u.className.baseVal=n:u.className=n)}function i(e,n){if("object"==typeof e)for(var A in e)f(e,A)&&i(A,e[A]);else{e=e.toLowerCase();var o=e.split("."),t=Modernizr[o[0]];if(2==o.length&&(t=t[o[1]]),"undefined"!=typeof t)return Modernizr;n="function"==typeof n?n():n,1==o.length?Modernizr[o[0]]=n:(!Modernizr[o[0]]||Modernizr[o[0]]instanceof Boolean||(Modernizr[o[0]]=new Boolean(Modernizr[o[0]])),Modernizr[o[0]][o[1]]=n),a([(n&&0!=n?"":"no-")+o.join("-")]),Modernizr._trigger(e,n)}return Modernizr}var s=[],r=[],l={_version:"3.5.0",_config:{classPrefix:"",enableClasses:!0,enableJSClass:!0,usePrefixes:!0},_q:[],on:function(e,n){var A=this;setTimeout(function(){n(A[e])},0)},addTest:function(e,n,A){r.push({name:e,fn:n,options:A})},addAsyncTest:function(e){r.push({name:null,fn:e})}},Modernizr=function(){};Modernizr.prototype=l,Modernizr=new Modernizr;var f,u=n.documentElement,c="svg"===u.nodeName.toLowerCase();!function(){var e={}.hasOwnProperty;f=o(e,"undefined")||o(e.call,"undefined")?function(e,n){return n in e&&o(e.constructor.prototype[n],"undefined")}:function(n,A){return e.call(n,A)}}(),l._l={},l.on=function(e,n){this._l[e]||(this._l[e]=[]),this._l[e].push(n),Modernizr.hasOwnProperty(e)&&setTimeout(function(){Modernizr._trigger(e,Modernizr[e])},0)},l._trigger=function(e,n){if(this._l[e]){var A=this._l[e];setTimeout(function(){var e,o;for(e=0;e<A.length;e++)(o=A[e])(n)},0),delete this._l[e]}},Modernizr._q.push(function(){l.addTest=i}),Modernizr.addAsyncTest(function(){function e(e,n,A){function o(n){var o=n&&"load"===n.type?1==t.width:!1,a="webp"===e;i(e,a&&o?new Boolean(o):o),A&&A(n)}var t=new Image;t.onerror=o,t.onload=o,t.src=n}var n=[{uri:"data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuUAAA=",name:"webp"},{uri:"data:image/webp;base64,UklGRkoAAABXRUJQVlA4WAoAAAAQAAAAAAAAAAAAQUxQSAwAAAABBxAR/Q9ERP8DAABWUDggGAAAADABAJ0BKgEAAQADADQlpAADcAD++/1QAA==",name:"webp.alpha"},{uri:"data:image/webp;base64,UklGRlIAAABXRUJQVlA4WAoAAAASAAAAAAAAAAAAQU5JTQYAAAD/////AABBTk1GJgAAAAAAAAAAAAAAAAAAAGQAAABWUDhMDQAAAC8AAAAQBxAREYiI/gcA",name:"webp.animation"},{uri:"data:image/webp;base64,UklGRh4AAABXRUJQVlA4TBEAAAAvAAAAAAfQ//73v/+BiOh/AAA=",name:"webp.lossless"}],A=n.shift();e(A.name,A.uri,function(A){if(A&&"load"===A.type)for(var o=0;o<n.length;o++)e(n[o].name,n[o].uri)})}),t(),a(s),delete l.addTest,delete l.addAsyncTest;for(var p=0;p<Modernizr._q.length;p++)Modernizr._q[p]();e.Modernizr=Modernizr}(window,document);
-</script>
-
-<!--POLYFILL-->
-<script src="scripts/intersection-observer.js" defer></script>
-
-<script src="scripts/main.js" defer></script>
+<script src="scripts/main.js?ver=1" async></script>
 
 </body>
-
-<!--SERVICE WORKER-->
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(function(reg){
-        console.log("serviceWorker registered");
-      }).catch(function(err) {
-      console.log("serviceWorker not registered. This happened: ", err)
-    });
-  }
-</script>
-
 </html>
-<link rel="stylesheet" href="styles/main.css" media="all">
+<link rel="stylesheet" href="styles/main.css?ver=1" media="all">
