--- a/src/policy.html
+++ b/src/policy.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОН-ЛАЙН МАРАФОН </title>
+  <title>«НОВЫЙ ВЗГЛЯД НА ДЕТЕЙ» | ОНЛАЙН МАРАФОН </title>
   <meta name="description" content="Практикум по созданию индивидуальной проактивной семейной карты">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta property="og:image" content="images/og-image.jpg"/>
