--- a/src/policy.html
+++ b/src/policy.html
@@ -19,7 +19,7 @@
 <p>Владелец сайта (далее Администрация) обязуется сохранять Вашу конфиденциальность в сети Интернет.</p>
 <p>Настоящая Политика Конфиденциальности, рассказывает о том, как собираются, обрабатываются и хранятся Ваши личные данные.</p>
 <p>Администрация уделяет большое внимание защите личной информации пользователей.</p>
-<p>Пользуюсь сайтом GPbro, пользователь тем самым дает согласие на применение правил сбора и использования данных, изложенных настоящем документе.</p>
+<p>Пользуюсь сайтом, пользователь тем самым дает согласие на применение правил сбора и использования данных, изложенных настоящем документе.</p>
 <p>Если Вы не согласны с условиями нашей политики конфиденциальности, не используйте этот сайт.</p>
 <h3>Собираемая информация</h3>
 <p>Администрация сайта может собирать следующую информацию о пользователях сайта:</p>
